# FoxvoidEngine

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  imgui.ini  index.html  mkdocs.yml  objects.inv  recent_projects.json
.github/workflows/: docs.yml
android/FoxvoidAndroidTemplate/: settings.gradle.kts
android/FoxvoidAndroidTemplate/app/: build.gradle.kts
android/FoxvoidAndroidTemplate/app/src/androidTest/java/com/example/foxvoidandroidtemplate/: ExampleInstrumentedTest.kt
android/FoxvoidAndroidTemplate/app/src/main/: AndroidManifest.xml
android/FoxvoidAndroidTemplate/app/src/main/java/com/example/foxvoidandroidtemplate/: MainActivity.kt
android/FoxvoidAndroidTemplate/app/src/main/res/values/: strings.xml  themes.xml
android/FoxvoidAndroidTemplate/app/src/main/res/values-night/: themes.xml
android/FoxvoidAndroidTemplate/app/src/test/java/com/example/foxvoidandroidtemplate/: ExampleUnitTest.kt
android/FoxvoidAndroidTemplate/gradle/wrapper/: gradle-wrapper.properties
assets/prefabs/: Player.prefab
assets/scenes/: GreenSceneTest.scene  RedSceneTest.scene  default_scene.json  default_scene.scene
assets/scripts/: PlayerController.py  main.py
assets/settings/: inputs.json
cmake/: mingw-toolchain.cmake
docs/: index.md  scripting_api.md
foxvoid/: __init__.pyi
scripting_api/: index.html
search/: search_index.json
src/: main.cpp
src/audio/: AudioSource.cpp  AudioSource.hpp
src/core/: AssetManager.cpp  AssetManager.hpp  AssetRegistry.cpp  AssetRegistry.hpp  Engine.cpp  Engine.hpp  GameStateManager.cpp  GameStateManager.hpp  InputManager.cpp  InputManager.hpp  Mouse.cpp  Mouse.hpp  PakEntry.hpp  ProjectSettings.cpp  ProjectSettings.hpp  UUID.cpp  UUID.hpp
src/editor/: Build.cpp  Build.hpp  CodeEditorPanel.cpp  CodeEditorPanel.hpp  Editor.cpp  Editor.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorConsole.hpp  EditorUI.cpp  EditorUI.hpp  EditorViewMode.hpp  GameStatePanel.cpp  GameStatePanel.hpp  GameViewPanel.cpp  GameViewPanel.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  InputSettingsPanel.cpp  InputSettingsPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MainMenuBar.cpp  MainMenuBar.hpp  PerformancePanel.cpp  PerformancePanel.hpp  ProjectHubPanel.cpp  ProjectHubPanel.hpp  ProjectPanel.cpp  ProjectPanel.hpp  SceneViewPanel.cpp  SceneViewPanel.hpp  TilePalettePanel.cpp  TilePalettePanel.hpp  ToolbarPanel.cpp  ToolbarPanel.hpp
src/editor/commands/: ChangeNameCommand.cpp  ChangeNameCommand.hpp  CommandHistory.cpp  CommandHistory.hpp  CreateObjectCommand.cpp  CreateObjectCommand.hpp  DeleteObjectCommand.cpp  DeleteObjectCommand.hpp  ICommand.hpp  ModifyComponentCommand.cpp  ModifyComponentCommand.hpp  TileMapPaintCommand.cpp  TileMapPaintCommand.hpp  Transform2dCommand.cpp  Transform2dCommand.hpp
src/graphics/: Animation2d.cpp  Animation2d.hpp  Animator2d.cpp  Animator2d.hpp  Camera2d.cpp  Camera2d.hpp  Graphics.cpp  Graphics.hpp  ParticleSystem2d.cpp  ParticleSystem2d.hpp  ShapeRenderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  SpriteSheetRenderer.cpp  SpriteSheetRenderer.hpp  TileMap.cpp  TileMap.hpp
src/gui/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  HBoxContainer.cpp  HBoxContainer.hpp  ImageRenderer.cpp  ImageRenderer.hpp  Mask.cpp  Mask.hpp  RectTransform.cpp  RectTransform.hpp  Slider.cpp  Slider.hpp  TextInput.cpp  TextInput.hpp  TextRenderer.cpp  TextRenderer.hpp  VBoxContainer.cpp  VBoxContainer.hpp
src/physics/: CapsuleCollider.hpp  CircleCollider.hpp  ColliderData.hpp  Collision2D.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PolygonCollider.hpp  RectCollider.hpp  RigidBody2d.hpp  SpatialHashGrid.cpp  SpatialHashGrid.hpp  Transform2d.hpp
src/scripting/: DataManager.cpp  DataManager.hpp  PythonStubs.hpp  ScriptBindings.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptableObject.cpp  ScriptableObject.hpp  VFSFinder.hpp  VFSLoader.hpp
src/scripting/bindings/: BindAudio.cpp  BindCore.cpp  BindGUI.cpp  BindGraphics.cpp  BindInput.cpp  BindMathAndPhysics.cpp
src/world/: Component.hpp  ComponentRegistration.cpp  ComponentRegistration.hpp  ComponentRegistry.hpp  GameObject.cpp  GameObject.hpp  PersistentComponent.hpp  Scene.hpp
web/: web_shell.html
